Fix: Global Menu - white space on top #211
Since the Layoutshift phenomenon does not occur in Linux, I will change it to be applied only to Windows.

--- a/userChrome.css
+++ b/userChrome.css
@@ -887,17 +887,21 @@
 
   /*= Global Menu - Set Padding ==============================================*/
   /* Prevent layout shifts */
-  #toolbar-menubar {
-    display: flex !important;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  #toolbar-menubar > spacer {
-    order: 1000; /* as Original's -moz-box-ordinal-group: 1000 */
-    flex: 1; /* Fill row */
-  }
-  #toolbar-menubar > .titlebar-buttonbox-container {
-    order: 1000; /* as Original's -moz-box-ordinal-group: 1000 */
+  @media (-moz-os-version: windows-win7),
+         (-moz-os-version: windows-win8),
+         (-moz-os-version: windows-win10) {
+    #toolbar-menubar {
+      display: flex !important;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    #toolbar-menubar > spacer {
+      order: 1000; /* as Original's -moz-box-ordinal-group: 1000 */
+      flex: 1; /* Fill row */
+    }
+    #toolbar-menubar > .titlebar-buttonbox-container {
+      order: 1000; /* as Original's -moz-box-ordinal-group: 1000 */
+    }
   }
 
   /* Vertical Align - Center & Height: 100%  */
